overflow fix

--- a/zavtra/static/css/style.css
+++ b/zavtra/static/css/style.css
@@ -139,6 +139,8 @@ ul, ul li { list-style-type: none; margin: 0; padding: 0; }
 
 .top-nav ul {
     width: 100%;
+    min-width: 960px;
+    overflow: hidden;
     height: 40px;
     margin-top: 4px;
     background: black;
